fixing the visibility of background, which i could only see this on live server in VS

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
 body {
   font-family: "Roboto", sans-serif;
   position: relative;
-  background-image: url("/images/bakcground_home.jpg");
+  background-image: url("../images/bakcground_home.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 99vh;
@@ -154,18 +154,18 @@ main {
 .services {
   position: absolute;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 300px 400px;
+  gap: 24px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 200px 200px;
   width: 65%;
   height: 1052px;
   left: 340px;
   background: #fcfcfc;
   -ms-flex-negative: 1;
       flex-shrink: 1;
-  margin: 320px auto;
+  margin: 420px auto;
   -webkit-box-shadow: -3px 3px 4px rgba(0, 0, 0, 0.25), 3px 3px 4px rgba(74, 74, 74, 0.25);
           box-shadow: -3px 3px 4px rgba(0, 0, 0, 0.25), 3px 3px 4px rgba(74, 74, 74, 0.25);
-  top: 800px;
 }
 @media (min-width: 992px) {
   .services {
@@ -189,6 +189,16 @@ main {
 }
 .services .section-services {
   margin: 250px 30px;
+}
+@media (min-width: 992px) {
+  .services .section-services {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 536px) {
+  .services .section-services {
+    font-size: 1rem;
+  }
 }
 .services .services-name {
   font-size: 2rem;
@@ -223,7 +233,7 @@ main {
 }
 
 .price__list {
-  background-image: url(/images/contact.jpg);
+  background-image: url("../images/contact.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
@@ -281,9 +291,8 @@ main {
   background-color: #0e1c26;
   color: white;
   width: 99vw;
-  bottom: -101px;
+  bottom: -95px;
 }
-
 .btn {
   display: block;
   padding: 15px 25px;
