--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -8,7 +8,7 @@
 body {
     font-family: "Roboto", sans-serif;
     position: relative;
-    background-image: url("/images/bakcground_home.jpg");
+    background-image: url("../images/bakcground_home.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     height: 99vh;
