--- a/scss/layout/_section.scss
+++ b/scss/layout/_section.scss
@@ -4,18 +4,20 @@ main {
 .services {
     position: absolute;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 300px 400px;
+    gap: 24px;
+    grid-template-columns: 1fr 1fr 1fr;
+    // grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 200px 200px;
     width: 65%;
     height: 1052px;
     left: 340px;
     background: #fcfcfc;
     flex-shrink: 1;
-    margin: 320px auto;
+    margin: 420px auto;
     box-shadow:
         -3px 3px 4px rgba(0, 0, 0, 0.25),
         3px 3px 4px rgba(74, 74, 74, 0.25);
-    top: 800px;
+
     @include medium-up {
         top: 1156px;
         width: 65%;
@@ -34,6 +36,13 @@ main {
     }
     .section-services {
         margin: 250px 30px;
+
+        @include medium-up {
+            font-size: $font-size-5;
+        }
+        @include small-up {
+            font-size: $font-size-7;
+        }
     }
     .services-name {
         font-size: $font-size-4;
@@ -68,7 +77,7 @@ main {
 }
 .price {
     &__list {
-        background-image: url(/images/contact.jpg);
+        background-image: url("../images/contact.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         position: relative;
